fix(wallet): make amount key as currency amount
